--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,17 +6,53 @@
   <script src="https://unpkg.com/react@16.13.1/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.13.1/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.9.3/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
+    // function Message({children}) {
+    //   return <div className="message">{children}</div>
+    // }
 
+    function Message({subject, greeting}) {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
+    }
+    Message.propTypes = {
+      subject: PropTypes.string.isRequired,
+      greeting: PropTypes.string.isRequired,
+    }
+
+    // Message.propTypes = {
+    //   subject(props, propName, componentName) {
+    //     if (typeof props[propName] !== 'string') {
+    //       return new Error('Must be String')
+    //     }
+    //   },
+    //   greeting(props, propName, componentName) {
+    //     if (typeof props[propName] !== 'string') {
+    //       return new Error('Must be String')
+    //     }
+    //   },
+    // }
+
+    //console.log(Message)
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
-      <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
-      </div>
+      <>
+        <Message greeting="Hello" subject={'World'} />
+        <Message greeting="Goodbye" subject="World" />
+        {/* {Message({children: 'Hello World'})}
+         <Message>Goodbye World</Message>
+      {React.createElement(Message, {children: 'Goodbye World'})} */}
+      </>
     )
+
+    //  const element2 = React.createElement(message, {children: 'Goodbye World'})
+    //  console.log(element2)
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.render(element, document.getElementById('root'))
